--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 video.srcObject = stream;
 
                 // Даем время камере загрузиться и начать показывать изображение
-                video.onloadedmetadata = async () => {
+                video.onloadedmetadata = () => {
+                    video.play(); // Убедитесь, что видео воспроизводится
+
                     // Подождем немного, чтобы изображение стабилизировалось
                     setTimeout(async () => {
                         // Рисуем текущее изображение с видео на холсте
